--- a/src/main/resources/templates/board/post.html
+++ b/src/main/resources/templates/board/post.html
@@ -33,7 +33,7 @@
         </div>
         <div class="form-group" hidden="hidden">
             <label for="email"></label>
-            <input type="email" class="form-control" id="email" th:field="*{email}">
+            <input type="text" class="form-control" id="email" th:field="*{email}">
         </div>
         <button type="button" class="btn btn-secondary" onclick="window.history.back()">취소</button>
         <button type="submit" class="btn btn-primary">등록</button>
