--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -59,7 +59,7 @@
           </div>
           <div class="form-group">
             <label for="email">이메일:</label>
-            <input type="email" class="form-control" id="email" th:field="*{email}" required>
+            <input type="text" class="form-control" id="email" th:field="*{email}" required>
           </div>
           <div class="form-group">
             <label for="password">비밀번호:</label>
@@ -77,7 +77,8 @@
           <img src="" th:src="${profileImage}" style="width: 100px; height: 100px;" alt="Profile Image"/>
           <!-- 편집 모드를 전환하는 버튼 -->
           <div>
-            <a href="" class="editBtn btn btn-primary me-2" id="editBtnEnabled" onclick="toggleEditing(event)">Edit profile</a>
+            <span th:if="${isSocial}">unable to modify</span>
+            <a th:if="${!isSocial}" href="" class="editBtn btn btn-primary me-2" id="editBtnEnabled" onclick="toggleEditing(event)">Edit profile</a>
             <button type="button" class="btn btn-danger d-line-block" onclick="confirmDelete()">Delete</button>
           </div>
         </div>
